fixed tablet titles spacing

--- a/style.css
+++ b/style.css
@@ -672,13 +672,13 @@ ul a {
         margin-left: 0;
    }
     .hebergements h2 {
-        margin: 50px 0 30px 0;
+        margin: 40px 0 25px 0;
    }
     div.hebergement-cards .more {
         display: block;
    }
     .aside-title h2 {
-        margin: 50px 0 30px 0;
+        margin: 30px 0 10px 0;
    }
     .aside-container {
         width: 100%;
